- removing long description type, will use html instead of the confluence options - cleanup